uses List.of() instead of Collections.emptyList()